# EzGL

./: .gitmodules  CMakeLists.txt  README.md
Example/: CMakeLists.txt  Main.cpp  Main.h  Settings.cpp
EzGL/: CMakeLists.txt  Camera.cpp  Camera.h  EBO.h  EBO.tpp  EzGLlibs.h  FBO.cpp  FBO.h  Graphics.cpp  Graphics.h  Graphics.tpp  RBO.cpp  RBO.h  Texture1D.cpp  Texture2D.cpp  Texture2D.h  Texture2D.tpp  Texture2DMultisample.cpp  Texture2DMultisample.h  Texture2DMultisample.tpp  Texture3D.cpp  UBO.cpp  UBO.h  UBO.tpp  VAO.cpp  VBO.h  VBO.tpp
Shaders/: FBO.frag  default.frag  default.vert
